gcc/testsuite/rust/compile/const_generics_6.rs
struct Foo<const N: usize>;
struct Bar<const N: usize = { 15i32 }>; // { dg-error "expected .usize. got .i32." }
